# aoc-companion-codegen

./: Cargo.toml
src/: lib.rs
